--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 // Variables
 $color-primary: #1e212c;
 $color-white: #ffffff;
@@ -12,9 +14,11 @@ $font-size-lg: 18px;
 $font-size-xl: 20px;
 $font-size-2xl: 46px;
 
-$line-height-tight: 1.3;
-$line-height-normal: 1.5;
-$line-height-relaxed: 1.6;
+$line-height: (
+  tight: 1.3,
+  normal: 1.5,
+  relaxed: 1.6
+);
 
 $spacing-xs: 4px;
 $spacing-sm: 8px;
@@ -123,7 +127,7 @@ body {
   &__suptitle {
     font-size: $font-size-base;
     font-weight: 700;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: $color-primary;
@@ -132,7 +136,7 @@ body {
   &__title {
     font-size: $font-size-2xl;
     font-weight: 900;
-    line-height: $line-height-tight;
+    line-height: map.get($line-height, tight);
     color: $color-primary;
   }
 
@@ -179,7 +183,7 @@ body {
     outline: none;
     width: 100%;
     font-size: $font-size-sm;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: $color-primary;
 
     &::placeholder {
@@ -230,14 +234,14 @@ body {
   &__label {
     font-size: $font-size-base;
     font-weight: 700;
-    line-height: $line-height-relaxed;
+    line-height: map.get($line-height, relaxed);
     color: $color-text-secondary;
   }
 
   &__count {
     font-size: $font-size-xs;
     font-weight: 900;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: $color-text-secondary;
   }
 }
@@ -296,7 +300,7 @@ body {
     padding: 1px $spacing-sm;
     border-radius: $border-radius;
     font-size: $font-size-sm;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: $color-white;
 
     &_theme_design {
@@ -323,7 +327,7 @@ body {
   &__title {
     font-size: $font-size-xl;
     font-weight: 700;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: $color-primary;
   }
 
@@ -336,7 +340,7 @@ body {
   &__price {
     font-size: $font-size-lg;
     font-weight: 700;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: #ff4242;
   }
 
@@ -348,7 +352,7 @@ body {
 
   &__author {
     font-size: $font-size-lg;
-    line-height: $line-height-normal;
+    line-height: map.get($line-height, normal);
     color: $color-text-tertiary;
   }
 }
