--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,10 @@ body {
   }
 }
 
-.courses__section {
+.courses {
   position: relative;
 }
-
-.courses-header {
+.courses__header {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -68,12 +67,18 @@ body {
   gap: 32px;
   margin-bottom: 60px;
 }
-.courses-header__titles {
+@media (max-width: 767px) {
+  .courses__header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+.courses__titles {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.courses-header__suptitle {
+.courses__suptitle {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
@@ -81,32 +86,39 @@ body {
   text-transform: uppercase;
   color: #1e212c;
 }
-.courses-header__title {
+.courses__title {
   font-size: 46px;
   font-weight: 900;
   line-height: 1.3;
   color: #1e212c;
 }
-.courses-header__controls {
+.courses__controls {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 24px;
 }
 @media (max-width: 767px) {
-  .courses-header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .courses-header__controls {
+  .courses__controls {
     align-items: stretch;
   }
 }
-
-.courses-search {
+.courses__search {
   width: 315px;
 }
-.courses-search__field {
+@media (max-width: 767px) {
+  .courses__search {
+    width: 100%;
+  }
+}
+.courses__category-filter {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 12px;
+}
+
+.search__field {
   display: flex;
   align-items: center;
   gap: 12px;
@@ -115,13 +127,13 @@ body {
   border: 1px solid #d7dadd;
   background-color: #ffffff;
 }
-.courses-search__icon {
+.search__icon {
   flex: 0 0 16px;
   width: 16px;
   height: 16px;
   background: url("./assets/icon-search.svg") center/contain no-repeat;
 }
-.courses-search__input {
+.search__input {
   border: none;
   outline: none;
   width: 100%;
@@ -129,22 +141,11 @@ body {
   line-height: 1.5;
   color: #1e212c;
 }
-.courses-search__input::placeholder {
+.search__input::placeholder {
   color: #9a9ca5;
 }
-@media (max-width: 767px) {
-  .courses-search {
-    width: 100%;
-  }
-}
 
-.courses-tabs {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 12px;
-}
-.courses-tabs__item {
+.category-filter__item {
   border-radius: 4px;
   padding: 10px 20px;
   border: 1px solid transparent;
@@ -152,28 +153,28 @@ body {
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.courses-tabs__item:hover:not(.courses-tabs__item_active) {
+.category-filter__item:hover:not(.category-filter__item_active) {
   border-color: #ff3f3a;
 }
-.courses-tabs__item_active {
+.category-filter__item_active {
   border-color: #ff3f3a;
 }
-.courses-tabs__item_active .courses-tabs__label,
-.courses-tabs__item_active .courses-tabs__count {
+.category-filter__item_active .category-filter__label,
+.category-filter__item_active .category-filter__count {
   color: #ff3f3a;
 }
-.courses-tabs__inner {
+.category-filter__inner {
   display: flex;
   align-items: center;
   gap: 4px;
 }
-.courses-tabs__label {
+.category-filter__label {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.6;
   color: #9a9ca5;
 }
-.courses-tabs__count {
+.category-filter__count {
   font-size: 10px;
   font-weight: 900;
   line-height: 1.5;
