--- a/styles.css
+++ b/styles.css
@@ -181,18 +181,18 @@ body {
   color: #9a9ca5;
 }
 
-.courses-grid {
+.courses__grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 30px;
 }
 @media (max-width: 1199px) {
-  .courses-grid {
+  .courses__grid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 @media (max-width: 767px) {
-  .courses-grid {
+  .courses__grid {
     grid-template-columns: minmax(0, 1fr);
   }
 }
