--- a/styles.css
+++ b/styles.css
@@ -103,20 +103,6 @@ body {
     align-items: stretch;
   }
 }
-.courses__search {
-  width: 315px;
-}
-@media (max-width: 767px) {
-  .courses__search {
-    width: 100%;
-  }
-}
-.courses__category-filter {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 12px;
-}
 .courses__grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -132,16 +118,20 @@ body {
     grid-template-columns: minmax(0, 1fr);
   }
 }
-.courses__card {
-  display: flex;
-  flex-direction: column;
-}
 .courses__actions {
   display: flex;
   justify-content: center;
   margin-top: 60px;
 }
 
+.search {
+  width: 315px;
+}
+@media (max-width: 767px) {
+  .search {
+    width: 100%;
+  }
+}
 .search__field {
   display: flex;
   align-items: center;
@@ -169,6 +159,12 @@ body {
   color: #9a9ca5;
 }
 
+.category-filter {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 12px;
+}
 .category-filter__item {
   border-radius: 4px;
   padding: 10px 20px;
@@ -205,6 +201,8 @@ body {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #e5e8ed;
@@ -234,19 +232,19 @@ body {
   line-height: 1.5;
   color: #ffffff;
 }
-.card__badge_theme_design {
+.card__badge--design {
   background-color: #f52f6e;
 }
-.card__badge_theme_hr {
+.card__badge--hr {
   background-color: #f89828;
 }
-.card__badge_theme_development {
+.card__badge--development {
   background-color: #7772f1;
 }
-.card__badge_theme_management {
+.card__badge--management {
   background-color: #5a87fc;
 }
-.card__badge_theme_marketing {
+.card__badge--marketing {
   background-color: #03cea4;
 }
 .card__title {
