--- a/styles.scss
+++ b/styles.scss
@@ -101,22 +101,18 @@ body {
 
   &__header {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     gap: 32px;
     margin-bottom: 60px;
-
-    @media (max-width: $breakpoint-sm) {
-      flex-direction: column;
-      align-items: flex-start;
-    }
   }
 
   &__titles {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    align-items: center;
   }
 
   &__suptitle {
