--- a/styles.scss
+++ b/styles.scss
@@ -133,7 +133,8 @@ body {
 
   &__controls {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
     align-items: flex-end;
     gap: $spacing-content;
 
