--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,12 @@ button, input, select, textarea {
   color: #1e212c;
 }
 .courses__controls {
+  width: 100%;
   display: flex;
   flex-direction: row-reverse;
+  justify-content: space-between;
   flex-wrap: wrap;
-  align-items: flex-end;
-  gap: 24px;
+  align-items: center;
 }
 @media (max-width: 767px) {
   .courses__controls {
@@ -168,13 +169,13 @@ button, input, select, textarea {
 }
 .category-filter__item {
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 9px 19px;
   border: 1px solid transparent;
   background-color: transparent;
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.category-filter__item:hover:not(.category-filter__item:hover--active) {
+.category-filter__item:hover {
   border-color: #ff3f3a;
 }
 .category-filter__item--active {
@@ -185,7 +186,7 @@ button, input, select, textarea {
 }
 .category-filter__inner {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 4px;
 }
 .category-filter__label {
