--- a/styles.scss
+++ b/styles.scss
@@ -273,7 +273,7 @@ button, input, select, textarea {
     0 80px 80px -20px rgba(154, 156, 165, 0.08);
   overflow: hidden;
 
-  &_type_featured {
+  &--type_featured {
     box-shadow: 0 4px 4px -4px rgba(30, 33, 44, 0.05),
       0 12px 10px -6px rgba(154, 156, 165, 0.08),
       0 30px 24px -10px rgba(154, 156, 165, 0.1),
