Fixing card title indentation

--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,7 @@ button, input, select, textarea {
   background-color: #03cea4;
 }
 .card__title {
+  margin: 0;
   font-size: 20px;
   font-weight: 700;
   line-height: 1.5;
