--- a/styles.scss
+++ b/styles.scss
@@ -324,6 +324,7 @@ button, input, select, textarea {
   }
 
   &__title {
+    margin: 0;
     font-size: $font-size-xl;
     font-weight: 700;
     line-height: map.get($line-height, normal);
