--- a/styles.scss
+++ b/styles.scss
@@ -165,7 +165,7 @@ button, input, select, textarea {
   &__actions {
     display: flex;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 80px;
   }
 }
 
@@ -364,7 +364,7 @@ button, input, select, textarea {
   display: inline-flex;
   align-items: center;
   gap: 16px;
-  padding: 12px $spacing-content;
+  padding: 0;
   border: none;
   background: none;
   cursor: pointer;
