--- a/styles.css
+++ b/styles.css
@@ -27,29 +27,6 @@ button, input, select, textarea {
   padding: 44px 0 86px;
   background-color: #ffffff;
 }
-.page__background {
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  z-index: -1;
-}
-.page__background-shape, .page__background-dots {
-  position: absolute;
-  max-width: 100%;
-  height: auto;
-}
-.page__background-shape_position_top-right {
-  top: 0;
-  right: 0;
-}
-.page__background-dots_position_top-right {
-  top: 0;
-  right: 0;
-}
-.page__background-shape_position_bottom-left {
-  left: 56px;
-  top: 637px;
-}
 .page__main {
   max-width: 1230px;
   margin: 0 auto;
@@ -59,6 +36,30 @@ button, input, select, textarea {
   .page {
     padding-top: 24px;
   }
+}
+
+.background {
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: -1;
+}
+.background__semicircles, .background__dots, .background__arrows {
+  position: absolute;
+  max-width: 100%;
+  height: auto;
+}
+.background__semicircles {
+  left: calc((100vw - 1230px) * 0.08);
+  top: 64vh;
+}
+.background__dots {
+  left: 94vw;
+  top: 50px;
+}
+.background__arrows {
+  left: calc(1230px + (100vw - 1230px) * 0.77);
+  top: 98vh;
 }
 
 .courses {
