--- a/styles.scss
+++ b/styles.scss
@@ -74,7 +74,7 @@ button, input, select, textarea {
 }
 
 .background {
-  position: fixed;
+  position: absolute;
   inset: 0;
   pointer-events: none;
   z-index: -1;
